HAM-2: Added mobile fix for 2col overlapping grid

--- a/src/assets/scss/custom/overlapping-2col.scss
+++ b/src/assets/scss/custom/overlapping-2col.scss
@@ -14,7 +14,7 @@
     margin: 100px 0 50px;
     color: #FFF;
     text-align: center;
-    
+
     h1 {
       margin: 0;
       font-size: 40px;
@@ -59,7 +59,7 @@
       }
 
       p {
-        color:black;
+        color: black;
         font-size: 20px;
       }
     }
@@ -73,14 +73,14 @@
       }
 
       a {
-          padding: 20px;
-          align-self: center;
-          border: 4px solid $secondary-color;
-          border-radius: 35px;
-          color: $secondary-color;
-          background-color: $primary-link-bg-color;
-          text-align: center;
-          font-size: 20px;
+        padding: 20px;
+        align-self: center;
+        border: 4px solid $secondary-color;
+        border-radius: 35px;
+        color: $secondary-color;
+        background-color: $primary-link-bg-color;
+        text-align: center;
+        font-size: 20px;
       }
     }
 
@@ -141,11 +141,37 @@
 
 @media screen and (max-width: 768px) {
   .overlapping-2col {
+    padding: 0 20px;
+    
     .section-title-desc {
       h1 {
         font-size: 28px;
       }
     }
+
+    .block {
+      margin-bottom: 50px;
+      
+      .block-left {
+        width: 100%;
+
+        >img {
+          width: 100%;
+          max-width: 400px;
+          height: auto;
+          position: absolute;
+          top: -100px;
+          transform: translate(-50%, 0);
+          left: 50%;
+        }
+      }
+
+      .block-right {
+        h2 {
+          padding: 100px 20px;
+        }
+      }
+    }
   }
-  
+
 }
